--- a/src/Components/Footer/Footer.module.css
+++ b/src/Components/Footer/Footer.module.css
@@ -193,15 +193,15 @@ margin-top: 1rem;
         font-size: 10px;
     }
     .m2>:nth-child(1){
-        font-size: 12px;
+        font-size: 11px;
     }
    
     .m3>:nth-child(1){
-        font-size: 12px;
+        font-size: 11px;
     }
    
     .m4>:nth-child(1){
-        font-size: 12px;
+        font-size: 11px;
     }
     .bright>:nth-child(1){
         font-size: 10px;
