--- a/src/Components/Header/Header.module.css
+++ b/src/Components/Header/Header.module.css
@@ -6,6 +6,8 @@ color: white;
 display: flex;
 justify-content: space-between;
 padding: 1% 4%;
+position: fixed;
+width: 100%;
 
 }
 .ulist>li{
@@ -31,9 +33,18 @@ line-height: normal;
     display: flex;
     justify-content: space-between;
   gap: 2rem;
-   
+   margin-right: 5rem;
 }
+
 @media screen and (max-width:768px){
+    /* .container{
+        position: static;
+        width: none;
+    } */
+    .container{
+        width: 94%;
+        z-index: 2;
+    }
     .logo{
         height: 50px;
         width: 40px;
@@ -66,17 +77,19 @@ line-height: normal;
     display: block;
    
    
-    min-height: 100%;
+    min-height: 1000vh;
     width: 94%;
     background: #000000;
     line-height: 40px;
     padding: 20px;
     box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
     transition: all 0.5s ease;
-    z-index: 1000;
+    z-index: 999;
    align-items: left;
    text-align: left;
    gap: 2rem;
+
+   backdrop-filter: blur(5px);
     }
     .ulist>li{
         font-size: 14px;
