--- a/src/Components/Main/Main.module.css
+++ b/src/Components/Main/Main.module.css
@@ -7,6 +7,7 @@
     align-items: center;
     padding: 8% 4%;
     gap: 2rem;
+    padding-top: 5rem;
    
 }
 .div1>img{
